tests/paczka1/small_fuzzy/97611005.err
Error in line 1: 0zsI A131 47,1
Error in line 3: A628 A131 59,4
